# TGBotstCourse

./: Config.txt  pyproject.toml
test/: logn_poling2.py  long_pooling1.py  test_request.py  test_requests_cats_imgs.py
test/Module7. First bots/: GuessNumber.py
test/Module7. First bots/echo_bot/: echo_bot1.py  echo_bot2_without_decorators.py  echo_bot3_photo.py  echo_bot_4_copy.py
test/Module9/: Button_Menu.py  KeyboardBuilder.py  KeyboardBuilder2(add).py  KeyboardBuilder2(add_adjust).py  SimpleButtons.py  SpecButtons1.py  SpecButtonsWeb.py  task.py
test/Module9/Inline_buttons/: Callback_buttons.py  URL_buttons.py
test/Module9/rock_paper_scissors_bot/: .gitignore  bot.py
test/Module9/rock_paper_scissors_bot/config_data/: config.py
test/Module9/rock_paper_scissors_bot/handlers/: other_handlers.py  user_handlers.py
test/Module9/rock_paper_scissors_bot/keyboards/: keyboards.py
test/Module9/rock_paper_scissors_bot/services/: services.py
test/api/: API_test.py
