[tool.poetry]
name = "telegrambots"
version = "0.1.0"
description = ""
authors = ["Vadim Shubin <liliaa23ar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.25.1"
requests = "^2.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
